Add color inditaion for synced pages

--- a/apps/client/src/features/page/tree/styles/tree.module.css
+++ b/apps/client/src/features/page/tree/styles/tree.module.css
@@ -135,9 +135,9 @@
 
 .syncIndicator {
   position: absolute;
+  height: 100%;
   left: 0;
   top: 0;
   bottom: 0;
   width: 4px;
-  background-color: #22c55e; /* Green color */
 }
