--- a/apps/client/src/features/space/components/space-grid.module.css
+++ b/apps/client/src/features/space/components/space-grid.module.css
@@ -1,25 +1,36 @@
 .card {
-    background-color: var(--mantine-color-body);
-    @mixin hover {
-        box-shadow: var(--mantine-shadow-xs);
-        transform: scale(1.02);
-    }
+  background-color: var(--mantine-color-body);
+  @mixin hover {
+    box-shadow: var(--mantine-shadow-xs);
+    transform: scale(1.02);
+  }
 }
 
 .cardSection {
-    background: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-7));
+  background: light-dark(
+    var(--mantine-color-gray-1),
+    var(--mantine-color-dark-7)
+  );
 }
 
 .title {
-    font-family:
-            Greycliff CF,
-            var(--mantine-font-family);
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+  font-family:
+    Greycliff CF,
+    var(--mantine-font-family);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .icon {
-    margin-right: rem(5px);
-    color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-2));
+  margin-right: rem(5px);
+  color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-2));
+}
+
+.personalCard {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--mantine-color-blue-3) !important;
+}
+.personalSpaceSection {
+  margin-bottom: 2rem;
 }
