--- a/apps/client/src/features/page/tree/styles/tree.module.css
+++ b/apps/client/src/features/page/tree/styles/tree.module.css
@@ -19,6 +19,7 @@
   align-items: center;
   height: 100%;
   width: 93%; /* not to overlap with scroll bar */
+  padding-right: calc(var(--mantine-spacing-md) - rem(6px));
 
   color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
 
@@ -32,15 +33,11 @@
 
   .actions {
     visibility: hidden;
-    position: absolute;
-    height: 100%;
-    top: 0;
-    right: 0;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     background-color: light-dark(
       var(--mantine-color-gray-3),
-      var(--mantine-color-dark-6)
+      var(--mantine-color-dark-5)
     );
   }
 
